--- a/source/_posts/加入微软e5开发者计划.md
+++ b/source/_posts/加入微软e5开发者计划.md
@@ -28,7 +28,7 @@ comments: true
 ![](https://s3.bmp.ovh/imgs/2022/03/14f7a1fc4482c405.jpg)
 <center><p><code>到这这里一定要慎重,数据中心一定要选择离自己近的，不然OneDrive网盘会很卡</code></p><br>
 ![](https://s3.bmp.ovh/imgs/2022/03/20f0ac9600202268.png)</center>
-5. <p>需要一个手机号，支持中国手机+86，这里就不上图了，简单的验证码，不过需要特别说明一下，目前微软使用的是reCaptcha，在大陆是无法被加载的，这里引入一个油猴脚本，原理就是将链接替换为镜像站，[脚本链接](https://greasyfork.org/zh-CN/scripts/387185-recaptcha-%E9%AA%8C%E8%AF%81%E7%A0%81%E9%95%9C%E5%83%8F%E5%8A%A0%E8%BD%BD)</p>
+5. <p>需要一个手机号，支持中国手机+86，这里就不上图了，简单的验证码，不过需要特别说明一下，目前微软使用的是reCaptcha，在大陆是无法被加载的，这里引入一个油猴脚本，原理就是将链接替换为镜像站，[脚本链接](https://greasyfork.org/zh-CN/scripts/387185-recaptcha-验证码镜像加载)</p>
 安装后<code>刷新页面</code>再填写并点击<code>发送代码</code>，到此就完成了账户注册，接下来就是最大化白嫖
 6. <p>首先就是打开[微软控制台](https://admin.microsoft.com/)，首次登录需要认证身份，但是这个不好弄，就直接点击跳过(14天后必须认证)，再在侧边栏中点击Azure Active Directory，此时会跳转到新页面属于Azure，再次点击侧边栏的Azure Active Directory</p>
 <center>![](https://s3.bmp.ovh/imgs/2022/03/ca1da0d8dc0751bd.png)</center><p>然后！！再点击内侧侧边栏的“管理”中的“属性”(应该是管理这一栏的倒数第二个)，然后拉到最底部有一个<code>管理安全默认值</code>，将它改为否，不更改的话那个身份认证是非常麻烦的，即使有“魔法”也不一定成功认证</p>
