--- a/source/_posts/加入微软e5开发者计划.md
+++ b/source/_posts/加入微软e5开发者计划.md
@@ -38,44 +38,8 @@ comments: true
 
    ![](https://s3.bmp.ovh/imgs/2022/03/14f7a1fc4482c405.jpg)
 
-<center><p><code>到这这里一定要慎重,数据中心一定要选择离自己近的，不然OneDrive网盘会很卡</code></p><br>
-![](https://s3.bmp.ovh/imgs/2022/03/20f0ac9600202268.png)</center>
-
-5. 需要一个手机号，支持中国手机+86，这里就不上图了，简单的验证码，不过需要特别说明一下，目前微软使用的是reCaptcha，在大陆是无法被加载的，这里引入一个油猴脚本，原理就是将链接替换为镜像站，[脚本链接](https://greasyfork.org/zh-CN/scripts/387185-recaptcha-%E9%AA%8C%E8%AF%81%E7%A0%81%E9%95%9C%E5%83%8F%E5%8A%A0%E8%BD%BD)
-
-   安装后<code>刷新页面</code>再填写并点击<code>发送代码</code>，到此就完成了账户注册，接下来就是最大化白嫖
-
-6. 首先就是打开[微软控制台](https://admin.microsoft.com/)，首次登录需要认证身份，但是这个不好弄，就直接点击跳过(14天后必须认证)，再在侧边栏中点击Azure Active Directory，此时会跳转到新页面属于Azure，再次点击侧边栏的Azure Active Directory
-<center>### 前言
-
-<p>最近手头上要处理的东西有点多，需要用到office全家桶，网上虽有一堆五花八门的安装包，但都是残缺不全的，偶然间看到微软开发者计划能免费白嫖office365，真香！先来看看我们准备申请的这个开发者E5计划有些什么：</p>
-
-![](https://s3.bmp.ovh/imgs/2022/03/1861fcfb99f2a890.png)
-
-<p>简单说明一下，这个E5开发者计划是没有时间限制的，但是每隔90天，微软都会审核一次开发状态来续订账户，所以只注册使用是很可能被删除账户的，不过别急，下面也有续订教程</p>
-
-### 申请过程
-
-首先进入到申请链接中 ----->[点这里](https://developer.microsoft.com/zh-cn/microsoft-365/dev-program)
-
-1. <p>点击立即加入，如果未登录的话需要先登录你的微软个人邮箱，没有账户的话就创建一个，需要一个非微软的邮箱用来注册，好在这里它支持QQ邮箱，也可以选择获取新电子邮件，登录后点击立即加入进入第一步</p>
-
-   ![](https://s3.bmp.ovh/imgs/2022/03/b90b0f6898f70227.png)<center>国家可以选择中国(China)，公司随便编一个名字，我这里就编一个XX工作室，首选语言最好选择英语，因为选中文可能不成功</center>
-
-2. <p>这里问你开发最关注的是什么，就随便随一个</p>
-
-   ![](https://s3.bmp.ovh/imgs/2022/03/c742203977ff174c.png)
-
-3. <p>然后就是问你感兴趣的是什么，这里也是随便选</p>
-
-   ![](https://s3.bmp.ovh/imgs/2022/03/2977386741e5ec1f.jpg)
-
-4. <p>选择即时沙盒，选这个呢，就会自动帮你创建用户，选自定义的话，就都得自己配置，好处就是干净，如果是只用OneDrive网盘的话建议直接无脑第一个</p>
-
-   ![](https://s3.bmp.ovh/imgs/2022/03/14f7a1fc4482c405.jpg)
-
-<center><p><code>到这这里一定要慎重,数据中心一定要选择离自己近的，不然OneDrive网盘会很卡</code></p><br>
-![](https://s3.bmp.ovh/imgs/2022/03/20f0ac9600202268.png)</center>
+<center><p><code>到这这里一定要慎重,数据中心一定要选择离自己近的，不然OneDrive网盘会很卡</code></p></center><br>
+   ![](https://s3.bmp.ovh/imgs/2022/03/20f0ac9600202268.png)  
 
 5. 需要一个手机号，支持中国手机+86，这里就不上图了，简单的验证码，不过需要特别说明一下，目前微软使用的是reCaptcha，在大陆是无法被加载的，这里引入一个油猴脚本，原理就是将链接替换为镜像站，[脚本链接](https://greasyfork.org/zh-CN/scripts/387185-recaptcha-%E9%AA%8C%E8%AF%81%E7%A0%81%E9%95%9C%E5%83%8F%E5%8A%A0%E8%BD%BD)
 
