Update Post “加入微软e5开发者计划”

--- a/source/_posts/加入微软e5开发者计划.md
+++ b/source/_posts/加入微软e5开发者计划.md
@@ -28,7 +28,8 @@ comments: true
 ![](https://s3.bmp.ovh/imgs/2022/03/20f0ac9600202268.png)</center>
 5. 需要一个手机号，支持中国手机+86，这里就不上图了，简单的验证码，不过需要特别说明一下，目前微软使用的是reCaptcha，在大陆是无法被加载的，这里引入一个油猴脚本，原理就是将链接替换为镜像站，[脚本链接](https://greasyfork.org/zh-CN/scripts/387185-recaptcha-%E9%AA%8C%E8%AF%81%E7%A0%81%E9%95%9C%E5%83%8F%E5%8A%A0%E8%BD%BD)
    安装后<code>刷新页面</code>再填写并点击<code>发送代码</code>，到此就完成了账户注册，接下来就是最大化白嫖
-6. 首先就是打开[微软控制台](https://admin.microsoft.com/)，首次登录需要认证身份，但是这个不好弄，就直接点击跳过(14天后必须认证)，再在侧边栏中点击Azure Active Directory，此时会跳转到新页面属于Azure，再次点击侧边栏的Azure Active Directory ﻿  <center>![](https://s3.bmp.ovh/imgs/2022/03/ca1da0d8dc0751bd.png)</center> ﻿  然后！！再点击内侧侧边栏的“管理”中的“属性”(应该是管理这一栏的倒数第二个)，然后拉到最底部有一个<code>管理安全默认值</code>，将它改为否，不更改的话那个身份认证是非常麻烦的，即使有“魔法”也不一定成功认证
+6. 首先就是打开[微软控制台](https://admin.microsoft.com/)，首次登录需要认证身份，但是这个不好弄，就直接点击跳过(14天后必须认证)，再在侧边栏中点击Azure Active Directory，此时会跳转到新页面属于Azure，再次点击侧边栏的Azure Active Directory ﻿  <center>![](https://s3.bmp.ovh/imgs/2022/03/ca1da0d8dc0751bd.png)</center> ﻿  
+然后！！再点击内侧侧边栏的“管理”中的“属性”(应该是管理这一栏的倒数第二个)，然后拉到最底部有一个<code>管理安全默认值</code>，将它改为否，不更改的话那个身份认证是非常麻烦的，即使有“魔法”也不一定成功认证
 7. 接下来回到[微软控制台](https://admin.microsoft.com/)，在侧边栏的<code>管理中心</code>下有一个<code>SharePoint</code>，点进去会跳转到新页面，再点击侧边栏的<code>设置</code>，在里面找到<code>OneDrive  存储限制</code>，点击它修改为5120G，默认是1024G。至此中期工作就完成了
 ### 续订流程
 ``` bash
